Add notebook for blog post and other tutorial tweaks

--- a/examples/wbgapi-cookbook.ipynb
+++ b/examples/wbgapi-cookbook.ipynb
@@ -464,7 +464,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# A few Stupid API Tricks #\n",
+    "# A few \"Stupid API Tricks\" #\n",
     "\n",
     "## What's the distribution of poverty estimates over time? ##\n",
     "\n",
@@ -2167,7 +2167,7 @@
  ],
  "metadata": {
   "finalized": {
-   "timestamp": 1612637867981,
+   "timestamp": 1612638181513,
    "trusted": true
   },
   "kernelspec": {
