--- a/examples/wbgapi-cookbook.ipynb
+++ b/examples/wbgapi-cookbook.ipynb
@@ -1288,7 +1288,7 @@
    "source": [
     "## Aggregations\n",
     "\n",
-    "Aggregations are easy in pandas. You simply group rows and apply a summary function, something like like this:\n",
+    "Aggregations are easy in pandas. You simply use a summary function, something like this:\n",
     "\n",
     "       df.mean()\n",
     "\n",
@@ -2167,7 +2167,7 @@
  ],
  "metadata": {
   "finalized": {
-   "timestamp": 1612638181513,
+   "timestamp": 1612638564514,
    "trusted": true
   },
   "kernelspec": {
