Corrections to cookbook

--- a/examples/wbgapi-cookbook.ipynb
+++ b/examples/wbgapi-cookbook.ipynb
@@ -223,9 +223,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Note:** `wb.search` actually returns a print-friendly object that can easily be accessed in a for loop. The results of the `info` functions can be accessed by calling `list` or `Series` instead:\n",
+    "**Note:** `wb.search` actually returns a print-friendly object. You can use a nested for loop\n",
+    "to access search results programmatically, like this:\n",
     "\n",
-    "    for row in wb.series.info(q='co2'):\n",
+    "    for k,v in wb.search('pound').metadata.items():\n",
+    "        print(k) # k is the concept name\n",
+    "        for elem in v:\n",
+    "            print(elem.id)       # element ID (column 1)\n",
+    "            print(elem.name)     # element name (column 2)\n",
+    "            print(elem.metadata) # dictionary of metadata fields and values\n",
+    "\n",
+    "The results of the `info` functions can be accessed programmatically by calling `list` or `Series` instead:\n",
+    "\n",
+    "    for row in wb.series.list(q='co2'):\n",
     "        print(row)"
    ]
   },
@@ -2167,7 +2177,7 @@
  ],
  "metadata": {
   "finalized": {
-   "timestamp": 1612638564514,
+   "timestamp": 1636813133249,
    "trusted": true
   },
   "kernelspec": {
